styles.css
html {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: sans-serif;
}

.toolbar {
  display: flex;
  padding: 0 20px;
  background-color: #3c3a39;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  color: white;
}

.desktop_toolbar {
  display: none;
}

#desktop_version_grid {
  display: none;
}

a {
  text-decoration: none;
  color: white;
}

.intro {
  height: 500px;
  background-color: #1c1a19;
  padding: 0 24px 130px 24px;
  background-image: url("./images/Intro_background_image.png");
  background-repeat: no-repeat;
  background-position-x: right;
  background-position-y: bottom;
}

.intro h1 {
  font-family: Crete Round, sans-serif;
  font-style: normal;
  color: #ff6b00;
  padding-top: 120px;
  margin: auto;
  font-weight: lighter;
  padding-bottom: 10px;
  font-size: 56px;
  line-height: 64px;
}

.content > h2 {
  font-family: roboto, sans-serif;
  color: #fff5e1;
  font-size: 24px;
  line-height: 32px;
  font-weight: bold;
}

.content > p {
  font-family: poppins, sans-serif;
  color: white;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
}

.socials {
  display: flex;
  width: 50%;
  justify-content: space-between;
  font-size: 20px;
  padding-top: 20px;
}

li {
  list-style-type: none;
}

.socials > li {
  list-style-type: none;
}

.fab {
  color: #dbd8d7;
}

.recent_works {
  padding: 100px 45px;
}

.works_title > h3 {
  text-align: center;
  color: #1c1a19;
  font-family: Crete Round, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 40px;
  line-height: 52px;
}

.works_title > hr {
  width: 100%;
  border-color: #e5e5e5;
}

.recent_works img {
  padding: 75px 0 24px 0;
  width: 100%;
  height: 250px;
}

.recent_works h4 {
  font-family: Crete Round, sans-serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
  line-height: 44px;
  text-align: left;
  color: #091e42;
}

.recent_works .tags {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding: 0;
  width: 100%;
}

.recent_works li {
  font-family: Inter, sans-serif;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  text-align: left;
  color: #091e42;
  border: 1px solid #8993a4;
  padding: 10px 12px;
}

.recent_works p {
  font-family: Inter, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  padding: 0 24px 10px 0;
  margin: 0;
}

button {
  height: 48px;
  left: 0;
  top: 259px;
  border-radius: 0;
  padding: 12px;
  background-color: #ff6b00;
  font-family: Inter, sans-serif;
  font-size: 17px;
  font-style: normal;
  font-weight: 700;
  line-height: 24px;
  letter-spacing: 0.03em;
  text-align: center;
  color: white;
  margin-top: 3px;
  float: left;
  border: none;
}

button:hover {
  border: 1px solid #f55800;
  background-color: #fff5e1;
  color: #f55b00;
}

button:active {
  background-color: #e05304;
  color: #f4f1f0;
}

#mobile_version_grid {
  display: grid;
  padding: 25px;
  gap: 24px;
  grid-template: repeat(auto-fill, minmax(300px, 1fr)) / 1fr;
}

.grid-item {
  background: linear-gradient(
      180.45deg,
      rgba(38, 38, 38, 0) 0.75%,
      rgba(38, 38, 38, 0.9) 61.94%
    ),
    url(./images/Personal_art.png);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: auto;
  margin-top: 20px;
}

.grid-item h3 {
  font-family: Crete Round, sans-serif;
  font-size: 32px;
  font-style: normal;
  font-weight: lighter;
  line-height: 44px;
  letter-spacing: 0;
  text-align: left;
  color: white;
}

.grid-item-headline {
  padding: 0 15px;
}

.grid-item p {
  font-family: Inter, sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: 0;
  text-align: left;
  color: white;
}

.grid-item .tags {
  display: flex;
  gap: 15px;
  padding: 0 15px;
}

.grid-item li {
  color: white;
  background: rgba(255, 255, 255, 0.24);
  border: none;
  padding: 10px 12px;
  font-family: Inter, sans-serif;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  letter-spacing: 0;
  text-align: left;
}

.grid-item > button {
  width: 100%;
  margin-top: 0;
  height: auto;
}

.about-me {
  margin-top: 100px;
  background: #1c1a19;
}

.image-container {
  height: 300px;
  width: 100%;
  background-image: url("./images/Illustration_image.png");
  background-repeat: no-repeat;
  background-position-x: right;
  background-position-y: bottom;
}

.description_about_my_self h3 {
  font-family: Crete Round, sans-serif;
  font-size: 72px;
  font-style: normal;
  font-weight: 400;
  line-height: 88px;
  letter-spacing: 0.3700000047683716px;
  text-align: left;
  color: #ff6b00;
  padding: 120px 24px 15px 24px;
  margin: 0;
}

.description_about_my_self p {
  color: #f4f5f7;
  font-family: Inter, sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  padding: 10px 24px 10px 24px;
}

.description_about_my_self button {
  margin-left: 24px;
}

.description_about_my_self > hr {
  width: 75%;
  border-color: #fff;
  padding: 0 24px 0 24px;
}

.language_frameworks_and_skills {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  padding: 100px 24px 10px 10px;
}

.language {
  font-family: InaiMathi, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 42px;
  line-height: 44px;
  list-style-image: url("./images/Rectangle_bullet.png");
  list-style-position: inside;
  color: white;
  padding: 20px;
}

.frameworks {
  font-family: InaiMathi, sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 42px;
  line-height: 44px;
  list-style-image: url("./images/Rohbos_bullet.png");
  list-style-position: inside;
  color: white;
  padding: 20px;
}
/* ... */

